--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# START OF Special for this project
+tmp.*
+# END OF Special for this project
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
